--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     </div>
 </header>
 <div class="glavka">
-    <div class="column left"></div>
+    <div class="column left">
+        <div class="cup"></div>
+    </div>
     <div class="column right">
-        <div><h1>Бюро визуальных решений «Эмпарика»</h1></div>
-        <div>Если Вы читаете этот текст, то это первый шаг к нашему сотрудничеству. Мы специализируемся на решении задач в области разработки сайтов и графического дизайна. Генерируем, разрабатываем и воплощаем в жизнь самые смелые и креативные идеи.</div>
-        <div>Сделать первый шаг!</div>
+        <div class= "text"><h1 >Бюро визуальных решений «Эмпарика»</h1></div>       
+        <div class= "text">Если Вы читаете этот текст, то это первый шаг к нашему сотрудничеству. Мы специализируемся на решении задач в области разработки сайтов и графического дизайна. Генерируем, разрабатываем и воплощаем в жизнь самые смелые и креативные идеи.</div>
+        <div class= "text">Сделать первый шаг!</div>
     </div>
 </div>
 </body>
