--- a/index.html
+++ b/index.html
@@ -26,15 +26,20 @@
         </div>
     </div>
 </header>
-<div class="glavka">
+<section class="main">
+<div class="container">
     <div class="column left">
         <div class="cup"></div>
     </div>
     <div class="column right">
-        <div class= "text"><h1 >Бюро визуальных решений «Эмпарика»</h1></div>       
-        <div class= "text">Если Вы читаете этот текст, то это первый шаг к нашему сотрудничеству. Мы специализируемся на решении задач в области разработки сайтов и графического дизайна. Генерируем, разрабатываем и воплощаем в жизнь самые смелые и креативные идеи.</div>
-        <div class= "text">Сделать первый шаг!</div>
+        <h1 >Бюро визуальных решений «Эмпарика»</h1>       
+        <p>Если Вы читаете этот текст, то это первый шаг к нашему сотрудничеству. Мы специализируемся на решении задач в области разработки сайтов и графического дизайна. Генерируем, разрабатываем и воплощаем в жизнь самые смелые и креативные идеи.</p>
+        <button>Сделать первый шаг!</button>
     </div>
 </div>
+</section>
+<div class="clearfix"></div>
+
+
 </body>
 </html>
