--- a/index.html
+++ b/index.html
@@ -39,7 +39,45 @@
 </div>
 </section>
 <div class="clearfix"></div>
-
+<section class="products">
+   <div class="container">
+        <div class="item">
+            <div class="item_img" style="background:url(images/nagan.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text">Сайт кинофильма «<a href="#0">НАГАН</a>»</div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/gyp2.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text">Сайт ГУП «<a href="#0">Башгеолцентр РБ</a>»</div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/log4.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text">Сайт сети ресторанов быстрого питания «<a href="#0">Печёная картошка</a>»</div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/776.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text">Логотип службы доставка пиццы «<a href="#0">BrooksPizza</a>»</div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/1.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text">Логотип стоматологической клиники «<a href="#0">IDeC</a>»</div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/ava-ugaik.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text">Корпоративный информационный сайт «<a href="#0">УГАИК</a>»</div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/444.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text">Сайт ресторана доставки «<a href="#0">ARTFOOD</a>»</div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/ava-full1.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text">Сайт кинофильма «НАГАН»</div>
+        </div>
+    </div>
+</section>    
+        
+   
+        
 
 </body>
 </html>
