--- a/index.html
+++ b/index.html
@@ -34,49 +34,97 @@
     <div class="column right">
         <h1 >Бюро визуальных решений «Эмпарика»</h1>       
         <p>Если Вы читаете этот текст, то это первый шаг к нашему сотрудничеству. Мы специализируемся на решении задач в области разработки сайтов и графического дизайна. Генерируем, разрабатываем и воплощаем в жизнь самые смелые и креативные идеи.</p>
-        <button>Сделать первый шаг!</button>
+        <button class="button1">Сделать первый шаг!</button>
     </div>
 </div>
 </section>
 <div class="clearfix"></div>
 <section class="products">
-   <div class="container">
+   <div class="container bottomborder">
         <div class="item">
             <div class="item_img" style="background:url(images/nagan.jpg); background-size: contain;" href="#0"></div>
-            <div class="item_text">Сайт кинофильма «<a href="#0">НАГАН</a>»</div>
+            <div class="item_text str2"><div class="text_child">Сайт кинофильма «<a href="#0">НАГАН</a>»</div></div>
         </div>
         <div class="item">
             <div class="item_img" style="background:url(images/gyp2.jpg); background-size: contain;" href="#0"></div>
-            <div class="item_text">Сайт ГУП «<a href="#0">Башгеолцентр РБ</a>»</div>
+            <div class="item_text str2"><div class="text_child">Сайт ГУП «<a href="#0">Башгеолцентр РБ</a>»</div></div>
         </div>
         <div class="item">
             <div class="item_img" style="background:url(images/log4.jpg); background-size: contain;" href="#0"></div>
-            <div class="item_text">Сайт сети ресторанов быстрого питания «<a href="#0">Печёная картошка</a>»</div>
+            <div class="item_text str2"><div class="text_child">Сайт сети ресторанов быстрого питания «<a href="#0">Печёная картошка</a>»</div></div>
         </div>
         <div class="item">
             <div class="item_img" style="background:url(images/776.jpg); background-size: contain;" href="#0"></div>
-            <div class="item_text">Логотип службы доставка пиццы «<a href="#0">BrooksPizza</a>»</div>
+            <div class="item_text str2"><div class="text_child">Логотип службы доставка пиццы «<a href="#0">BrooksPizza</a>»</div></div>
         </div>
         <div class="item">
             <div class="item_img" style="background:url(images/1.jpg); background-size: contain;" href="#0"></div>
-            <div class="item_text">Логотип стоматологической клиники «<a href="#0">IDeC</a>»</div>
+            <div class="item_text str3"><div class="text_child">Логотип стоматологической клиники «<a href="#0">IDeC</a>»</div></div>
         </div>
         <div class="item">
             <div class="item_img" style="background:url(images/ava-ugaik.jpg); background-size: contain;" href="#0"></div>
-            <div class="item_text">Корпоративный информационный сайт «<a href="#0">УГАИК</a>»</div>
+            <div class="item_text str3"><div class="text_child">Корпоративный информационный сайт «<a href="#0">УГАИК</a>»</div></div>
         </div>
         <div class="item">
             <div class="item_img" style="background:url(images/444.jpg); background-size: contain;" href="#0"></div>
-            <div class="item_text">Сайт ресторана доставки «<a href="#0">ARTFOOD</a>»</div>
+            <div class="item_text str3"><div class="text_child">Сайт ресторана доставки «<a href="#0">ARTFOOD</a>»</div></div>
         </div>
         <div class="item">
             <div class="item_img" style="background:url(images/ava-full1.jpg); background-size: contain;" href="#0"></div>
-            <div class="item_text">Сайт кинофильма «НАГАН»</div>
+            <div class="item_text str3"><div class="text_child">Информационный сайт «<a href="#0">Футбольной Уфимской Любительской Лиги</a>»</div></div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/ava_pamyat.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text str2"><div class="text_child">Сайт «<a href="#0">Дом мебели Сипайлово</a>»</div></div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/nagan.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text str2"><div class="text_child">Сайт городской похоронной службы «<a href="#0">Память</a>»</div></div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/ava_profi_treid.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text str2"><div class="text_child">Сайт «<a href="#0">ПрофТрейд</a>»</div></div>
+        </div>
+        <div class="item">
+            <div class="item_img" style="background:url(images/ava_studiya_dizaina.jpg); background-size: contain;" href="#0"></div>
+            <div class="item_text str2"><div class="text_child">Сайт студии ландшафтного дизайна «<a href="#0">LIL studio</a>»</div></div>
         </div>
     </div>
-</section>    
-        
-   
+</section> 
+<div class="clearfix"></div>   
+<section class="info">   
+   <div class="container">
+   <div class="infoblock price">
+           <div class="name birka ">Стоимость</div>
+           <p>Итоговая стоимость проекта зависит от многих факторов. Существует несколько способов определения стоимости Вашего будущего проекта.</p>
+           <p>Один из них – наш «Калькулятор», он поможет сформулировать предварительную стоимость. Но она не является окончательной и для обсуждения деталей, необходимо связаться с нами.</p>
+           <button class="button2">
+             Расчитать стоимость сайта  
+           </button>
+    </div>
+    <div class="infoblock">
+           <div class="name">Новости</div>
+        <p><span class="date" >12.10.2016</span> Опубликован сайт компании «<a href="#0">БашСветТорг</a>»</p>
+        <p><span class="date" >07.10.2016</span> Наш блог скоропостижно прекратил своё существование.</p>
+        <p><span class="date" >09.06.2016</span> Успешно запущен новый лендингпейдж для замечательной <a href="#0">кейтеринговой компании</a> из Санкт-Петербурга!</p>        
+    </div>
+    <div class="infoblock">
+        <div class="imgblog"></div>
+    </div>
+   </div>
+</section>       
+<div class="clearfix"></div>
+<footer>
+    <div class="container">
+      <section class="footer top">
+          <div class="information">Сдано проектов: 28   |   Вакансии   |   Сотрудничество   |   Архив новостей</div>
+          <div></div>
+      </section> 
+      <section class="footer bottom">
+
+      </section> 
+    </div>
+</footer>  
         
 
 </body>
