--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Эмпарика | бюро визуальных решений</title>
     <link rel="stylesheet" href="style/style.css">
+    <script src="scripts/likely.js"></script>
+    <link rel="stylesheet" href="style/к/likely.css">
     </head>
 <body>
 <header>
@@ -117,11 +119,24 @@
 <footer>
     <div class="container">
       <section class="footer top">
-          <div class="information">Сдано проектов: 28   |   Вакансии   |   Сотрудничество   |   Архив новостей</div>
+          <div class="information">Сдано проектов: <strong>28</strong>   |   <a href="#0">Вакансии</a>   |   <a href="#0">Сотрудничество</a>   |   <a href="#0">Архив новостей</a></div>
           <div></div>
       </section> 
       <section class="footer bottom">
-
+           <div>
+               Расскажите о нас своим друзьям:
+           </div>
+            <div>© 2009—2016 Бюро визуальных решений «Эмпарика»</div>
+            <div>Электронная почта: info@emparika.ru   |   Телефон: +7 (347) 262-77-27    |   Контакты</div>
+            <div class="likely likely_visible likely_ready ">
+              <div class="twitter">Твитнуть</div>
+              <div class="facebook">Поделиться</div>
+              <div class="gplus">Плюсануть</div>
+              <div class="vkontakte">Поделиться</div>
+              <div class="telegram">Отправить</div>
+              <div class="odnoklassniki">Класснуть</div>
+              <div class="pinterest" data-media="i/pinnable.jpg">Запинить</div>
+            </div>
       </section> 
     </div>
 </footer>  
