--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Эмпарика | бюро визуальных решений</title>
     <link rel="stylesheet" href="style/style.css">
     <script src="scripts/likely.js"></script>
-    <link rel="stylesheet" href="style/к/likely.css">
+    <link rel="stylesheet" href="style/likely.css">
     </head>
 <body>
 <header>
@@ -119,25 +119,29 @@
 <footer>
     <div class="container">
       <section class="footer top">
-          <div class="information">Сдано проектов: <strong>28</strong>   |   <a href="#0">Вакансии</a>   |   <a href="#0">Сотрудничество</a>   |   <a href="#0">Архив новостей</a></div>
-          <div></div>
-      </section> 
-      <section class="footer bottom">
-           <div>
-               Расскажите о нас своим друзьям:
-           </div>
-            <div>© 2009—2016 Бюро визуальных решений «Эмпарика»</div>
-            <div>Электронная почта: info@emparika.ru   |   Телефон: +7 (347) 262-77-27    |   Контакты</div>
-            <div class="likely likely_visible likely_ready ">
-              <div class="twitter">Твитнуть</div>
-              <div class="facebook">Поделиться</div>
-              <div class="gplus">Плюсануть</div>
-              <div class="vkontakte">Поделиться</div>
-              <div class="telegram">Отправить</div>
-              <div class="odnoklassniki">Класснуть</div>
-              <div class="pinterest" data-media="i/pinnable.jpg">Запинить</div>
+          <div class="information">Сдано проектов: <strong>28</strong>   |   <a href="#0">Вакансии</a>   |   <a href="#0">Сотрудничество</a>   |   <a href="#0">Архив новостей</a>
+          </div>
+          <div class="soc"> Расскажите о нас своим друзьям:         
+              <div class="likely likely-small soc2">
+              <div class="twitter"></div>
+              <div class="facebook"></div>
+              <div class="gplus"></div>
+              <div class="vkontakte"></div>
+              <div class="telegram"></div>
+              <div class="odnoklassniki"></div>
+              <div class="pinterest" data-media="i/pinnable.jpg"></div>
+              </div>
             </div>
+          
       </section> 
+    </div>
+      <div class="clearfix"></div>
+      <div class="border_bottom"></div>
+      <div class="container">
+          <section class="footer bottom">           
+            <div class="fleft">© 2009—2016 Бюро визуальных решений «Эмпарика»</div>
+            <div class="fright">Электронная почта: <a href="#0">info@emparika.ru</a>   |   Телефон: +7 (347) 262-77-27    |   <a href="#0">Контакты</a></div>          
+          </section> 
     </div>
 </footer>  
         
